screen list shows temp layout #35468

Closed
opened 2013-05-22 17:28:03 +02:00 by Ali Najafi · 6 comments

%%%--- Operating System, Graphics card ---
Ubuntu Studio 12.10, Windows 7 (Without problem)

- Blender version with error, and version that worked ---

2.67a

- Short description of error ---

Just 2 tiny things, First in User-Preference-> Addon -> Has extra "Nodes" category, I think the correct one on windows is "Node".

Another one is "temp" Scene Layout beside Default, UV Editing etc... not working also it no need to be there.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Just really Thanks for your efforts

Good Lucks
%%%

%%%--- Operating System, Graphics card --- Ubuntu Studio 12.10, Windows 7 (Without problem) - Blender version with error, and version that worked --- 2.67a - Short description of error --- Just 2 tiny things, First in User-Preference-> Addon -> Has extra "Nodes" category, I think the correct one on windows is "Node". Another one is "temp" Scene Layout beside Default, UV Editing etc... not working also it no need to be there. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Just really Thanks for your efforts Good Lucks %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi,
Dev note: The "temp" screen appears when User Preferences window is open.

Fixed the "Nodes" and "Node" duplicate in SVN. %%%

%%%Hi, Dev note: The "temp" screen appears when User Preferences window is open. Fixed the "Nodes" and "Node" duplicate in SVN. %%%
Author

%%%
Yes my mistake on "temp" screan, it shows when User Preferences window is open.

Thanks%%%

%%% Yes my mistake on "temp" screan, it shows when User Preferences window is open. Thanks%%%

%%%Better to have temp screen hidden. Assigning to Ton.%%%

%%%Better to have temp screen hidden. Assigning to Ton.%%%

%%%fixed r57214.%%%

%%%fixed r57214.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35468
No description provided.