fix [#35468] screen list shows temp layout